# x64-Instruction-Decoder

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: fenice.c  fenice.h  main.c  main_test.c  mca.c  mca.h  queue.c  queue.h  vector.c  vector.h  x64id.c  x64id.h
src/test/: CMakeLists.txt  main_test.c  x64_op1.asm  x64_op2.asm  x64_op3a.asm  x86_op2_vex.asm  x86_op38.asm  x86_op3a.asm
src/utils/: function_length.c  function_length.h  test_functions.c  test_functions.h
test/: CMakeLists.txt  asm_sources.tar.xz  main_test.c  x64_op38.asm  x86_op1.asm  x86_op2.asm
